# AI-SISTEM-ZA-UCENJE

./: .gitignore  AGENTS.md  Analiza_backenda_2026-04-04.md  CHANGELOG.md  DEPENDENCIES_STATUS.md  DEVELOPER_GUIDE.md  DOKUMENTACIJA.md  FAZA12_BUGFIXES.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  MCP_INTEGRACIJA_PLAN.md  Makefile  NEDOSTAJUCE_STVARI.md  Optimizacija_koda.md  PHASE1_2_TEST_ANALYSIS.md  PHASE1_TEST_ANALYSIS.md  README.md  SECURITY.md  SISTEM_DOKUMENTACIJA.md  UPUTSTVO_ZA_UPOTREBU.md  auto-mcp-installer.sh  git-safe-snapshot.sh  index.html  index.html.1  opencode.json  project_map.md  quick-start.sh  session-compactor.sh  setup_complete.sh  setup_local_dev.sh  temp-file-monitor.sh  test_frontend.py  track-dns.sh
MCP_Servers/: README.md
backend/: Dockerfile  posthog-setup-report.md  requirements-dev.txt  requirements.txt
cron/: ai-learning-cron
docker/: .env.example  docker-compose.no-ollama.yml  docker-compose.prod.yml  docker-compose.yml
docs/: DEVELOPMENT_LOG.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
mcp-server/: Dockerfile  README.md  mcp_config.json  requirements.txt
mojAiProjekat/: package-lock.json  test-ai.js
moji projekti/AI SISTEM ZA UCENJE/ai-learning-system/mcp-server/: README.md  mcp_config.json  pyproject.toml
moji projekti/AI SISTEM ZA UCENJE/ai-learning-system/mcp-server/src/ai_learning_mcp/: __init__.py
scripts/: backfill_layout_data.py  backup-cron.sh  backup.sh  backup_db.sh  cleanup_db.sh  deploy.sh  fix-ports.sh  github_status.sh  (+11 more)
(+929 files in other folders)
